// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createWebpackConfigClient default Webpack config 1`] = `
Object {
  "createdWebpackConfigBase": true,
  "entry": Object {
    "app": Array [
      "<PROJECT_ROOT>/node_modules/core-js/modules/es.promise.js",
      "<PROJECT_ROOT>/node_modules/core-js/modules/es.array.iterator.js",
      "<PROJECT_ROOT>/src/webpack/render-batfish-app.js",
    ],
    "vendor": Array [
      "<PROJECT_ROOT>/node_modules/es6-promise/auto.js",
      "<PROJECT_ROOT>/node_modules/react",
      "<PROJECT_ROOT>/node_modules/react-dom",
      "<PROJECT_ROOT>/node_modules/react-helmet",
      "<PROJECT_ROOT>/node_modules/@mapbox/scroll-restorer/index.js",
      "<PROJECT_ROOT>/node_modules/@mapbox/link-hijacker/index.js",
    ],
  },
  "node": Object {
    "child_process": "empty",
    "dgram": "empty",
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "optimization": Object {
    "moduleIds": "hashed",
    "runtimeChunk": Object {
      "name": "manifest",
    },
    "splitChunks": Object {
      "cacheGroups": Object {
        "vendor": Object {
          "chunks": "initial",
          "enforce": true,
          "name": "vendor",
          "test": "vendor",
        },
      },
    },
  },
  "output": Object {
    "chunkFilename": "[name].chunk.js",
    "filename": "[name].js",
  },
  "plugins": Array [
    AssetsWebpackPlugin {
      "options": Object {
        "fileTypes": Array [
          "js",
          "css",
        ],
        "filename": "assets.json",
        "fullPath": true,
        "includeAllFileTypes": true,
        "includeFilesWithoutChunk": false,
        "integrity": false,
        "keepInMemory": false,
        "manifestFirst": true,
        "path": "<PROJECT_ROOT>/_batfish_site",
        "prettyPrint": false,
        "processOutput": [Function],
        "update": false,
        "useCompilerPath": false,
      },
      "writer": [Function],
    },
    DefinePlugin {
      "definitions": Object {
        "process.env.DEV_SERVER": false,
      },
    },
  ],
  "resolve": Object {
    "alias": Object {
      "react": "<PROJECT_ROOT>/node_modules/react",
      "react-dom": "<PROJECT_ROOT>/node_modules/react-dom",
      "react-helmet": "<PROJECT_ROOT>/node_modules/react-helmet",
    },
  },
  "target": "web",
}
`;

exports[`createWebpackConfigClient default production Webpack config 1`] = `
Object {
  "createdWebpackConfigBase": true,
  "entry": Object {
    "app": Array [
      "<PROJECT_ROOT>/node_modules/core-js/modules/es.promise.js",
      "<PROJECT_ROOT>/node_modules/core-js/modules/es.array.iterator.js",
      "<PROJECT_ROOT>/src/webpack/render-batfish-app.js",
    ],
    "vendor": Array [
      "<PROJECT_ROOT>/node_modules/es6-promise/auto.js",
      "<PROJECT_ROOT>/node_modules/react",
      "<PROJECT_ROOT>/node_modules/react-dom",
      "<PROJECT_ROOT>/node_modules/react-helmet",
      "<PROJECT_ROOT>/node_modules/@mapbox/scroll-restorer/index.js",
      "<PROJECT_ROOT>/node_modules/@mapbox/link-hijacker/index.js",
    ],
  },
  "node": Object {
    "child_process": "empty",
    "dgram": "empty",
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "optimization": Object {
    "moduleIds": "hashed",
    "runtimeChunk": Object {
      "name": "manifest",
    },
    "splitChunks": Object {
      "cacheGroups": Object {
        "vendor": Object {
          "chunks": "initial",
          "enforce": true,
          "name": "vendor",
          "test": "vendor",
        },
      },
    },
  },
  "output": Object {
    "chunkFilename": "[name]-[chunkhash].chunk.js",
    "filename": "[name]-[chunkhash].js",
  },
  "plugins": Array [
    AssetsWebpackPlugin {
      "options": Object {
        "fileTypes": Array [
          "js",
          "css",
        ],
        "filename": "assets.json",
        "fullPath": true,
        "includeAllFileTypes": true,
        "includeFilesWithoutChunk": false,
        "integrity": false,
        "keepInMemory": false,
        "manifestFirst": true,
        "path": "<PROJECT_ROOT>/_batfish_site",
        "prettyPrint": false,
        "processOutput": [Function],
        "update": false,
        "useCompilerPath": false,
      },
      "writer": [Function],
    },
    DefinePlugin {
      "definitions": Object {
        "process.env.DEV_SERVER": false,
      },
    },
  ],
  "resolve": Object {
    "alias": Object {
      "react": "<PROJECT_ROOT>/node_modules/react",
      "react-dom": "<PROJECT_ROOT>/node_modules/react-dom",
      "react-helmet": "<PROJECT_ROOT>/node_modules/react-helmet",
    },
  },
  "target": "web",
}
`;

exports[`createWebpackConfigClient with all Batfish config options that make a difference 1`] = `
Object {
  "createdWebpackConfigBase": true,
  "entry": Object {
    "app": Array [
      "<PROJECT_ROOT>/node_modules/core-js/modules/es.promise.js",
      "<PROJECT_ROOT>/node_modules/core-js/modules/es.array.iterator.js",
      "<PROJECT_ROOT>/test/sea-creatures.js",
      "<PROJECT_ROOT>/test/land-creatures.js",
      "<PROJECT_ROOT>/src/webpack/render-batfish-app.js",
    ],
    "vendor": Array [
      "<PROJECT_ROOT>/node_modules/react",
      "<PROJECT_ROOT>/node_modules/react-dom",
      "<PROJECT_ROOT>/node_modules/react-helmet",
      "<PROJECT_ROOT>/node_modules/@mapbox/scroll-restorer/index.js",
      "<PROJECT_ROOT>/node_modules/@mapbox/link-hijacker/index.js",
      "pigman",
      "revenge-of-pigman",
    ],
  },
  "node": Object {
    "child_process": "empty",
    "dgram": "empty",
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "optimization": Object {
    "moduleIds": "hashed",
    "runtimeChunk": Object {
      "name": "manifest",
    },
    "splitChunks": Object {
      "cacheGroups": Object {
        "vendor": Object {
          "chunks": "initial",
          "enforce": true,
          "name": "vendor",
          "test": "vendor",
        },
      },
    },
  },
  "output": Object {
    "chunkFilename": "[name].chunk.js",
    "filename": "[name].js",
  },
  "plugins": Array [
    AssetsWebpackPlugin {
      "options": Object {
        "fileTypes": Array [
          "js",
          "css",
        ],
        "filename": "assets.json",
        "fullPath": true,
        "includeAllFileTypes": true,
        "includeFilesWithoutChunk": false,
        "integrity": false,
        "keepInMemory": false,
        "manifestFirst": true,
        "path": "<PROJECT_ROOT>/test/fake/output/directory",
        "prettyPrint": false,
        "processOutput": [Function],
        "update": false,
        "useCompilerPath": false,
      },
      "writer": [Function],
    },
    DefinePlugin {
      "definitions": Object {
        "process.env.DEV_SERVER": false,
      },
    },
  ],
  "resolve": Object {
    "alias": Object {
      "react": "<PROJECT_ROOT>/node_modules/react",
      "react-dom": "<PROJECT_ROOT>/node_modules/react-dom",
      "react-helmet": "<PROJECT_ROOT>/node_modules/react-helmet",
    },
  },
  "target": "web",
  "underwentClientTransform": true,
}
`;
